# Echo-Live-Typetool

./: .gitignore  CMakeLists.txt  COMMANDS.md  Echo_Live_Typetool.cpp  README.md  config.txt  funcs.cpp  funcs.h  launch.bat  main.cpp  typetool_config.json
docs/: COMMANDS.md  CONFIG_DOCS.md  README.md
src/: funcs.cpp  funcs.h  main.cpp
